third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991c.lambda.exp
// -- Model dump before bytecode pipeline
module 0x42::Test {
    private fun foo(g: |(u64, u64, u64, u64)|u64,x: u64,y: u64,z: u64,q: u64): u64 {
        (g)(x, y, z, q)
    }
    public fun test() {
        if Eq<u64>(Test::foo(closure#0Test::test$lambda$1(), 10, 100, 1000, 10000), 10100) {
          Tuple()
        } else {
          Abort(0)
        };
        Tuple()
    }
    private fun test$lambda$1(param$0: u64,y: u64,param$2: u64,q: u64): u64 {
        {
          let _: u64 = param$2;
          {
            let _: u64 = param$0;
            Add<u64>(y, q)
          }
        }
    }
} // end 0x42::Test

// -- Sourcified model before bytecode pipeline
module 0x42::Test {
    fun foo(g: |(u64, u64, u64, u64)|u64, x: u64, y: u64, z: u64, q: u64): u64 {
        g(x, y, z, q)
    }
    public fun test() {
        if (foo(|(arg0,arg1,arg2,arg3)| test$lambda$1(arg0, arg1, arg2, arg3), 10, 100, 1000, 10000) == 10100) () else abort 0;
    }
    fun test$lambda$1(param$0: u64, y: u64, param$2: u64, q: u64): u64 {
        let _ = param$2;
        let _ = param$0;
        y + q
    }
}


Diagnostics:
error: Calls to function values other than inline function parameters not yet implemented
  ┌─ tests/lambda/inline-parity/bug_10991c.move:4:9
  │
4 │         g(x, y, z, q)
  │         ^^^^^^^^^^^^^

error: Function-typed values not yet implemented except as parameters to calls to inline functions
  ┌─ tests/lambda/inline-parity/bug_10991c.move:8:21
  │
8 │         assert!(foo(|_, y, _, q| y + q,
  │                     ^^^^^^^^^^^^^^^^^^
